--- a/build.gradle
+++ b/build.gradle
@@ -9,9 +9,9 @@ buildscript {
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
 
-version = "0.1.2"
+version = "1.0.0"
 group = "net.enderturret.randomitems"
-archivesBaseName = "EndersRandomItems-1.12"
+archivesBaseName = "EndersRandomItems-1.12.2"
 
 sourceCompatibility = targetCompatibility = '1.8'
 compileJava {
@@ -19,7 +19,7 @@ compileJava {
 }
 
 minecraft {
-    version = "1.12.2-14.23.4.2705"
+    version = "1.12.2-14.23.4.2708"
     runDir = "run"
 
     mappings = "snapshot_20171003"
@@ -27,7 +27,9 @@ minecraft {
 }
 
 dependencies {
+}
 
+repositories {
 }
 
 processResources {
