--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,7 @@
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
 # Eclipse
-bin
-.settings
-.metadata
+bin/
+.settings/
+.metadata/
 *.launch
 .classpath
 .project
@@ -26,24 +14,12 @@ out
 .idea
 
 # Gradle
-build
-gradle
-.gradle
-gradlew
-gradlew.bat
-gradle.properties
+build/
+.gradle/
 
 # Other
-eclipse
-run
-
-# Package Files
-*.jar
-*.war
-*.ear
-*.zip
-*.tar.gz
-*.rar
+run/
+update.sh
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
